# EDA2-estruturas

./: CMakeLists.txt  main.c
lib/include/: hash-table.h  list-graph.h  matrix-graph.h  priority-queue.h  stack.h
lib/source/: hash-table.c  list-graph.c  matrix-graph.c  priority-queue.c  stack.c
